# iolite

./: .clang-tidy  .gitignore  .gitmodules  .readthedocs.yaml  LICENSE.md  README.md
.github/: FUNDING.yml
.github/workflows/: build_lua_plugin.yml  build_plugins.yml  build_sample_plugins.yml  bundle_samples.yml  create_release.yml
iolite_c_api/: README.md  iolite_api.h
iolite_c_api/sample_plugins/: CMakeLists.txt  build_plugins.sh  minimal_plugin.cpp  sample_plugin.c  sample_plugin.cpp  sample_plugin_vulkan.c
iolite_docs/: api.rst  conf.py  editor.rst  engine.rst  faq.rst  generate_lua_api_doc.py  getting_started.rst  guides.rst  index.rst  intro.rst  introduction.rst  plugins.rst  requirements.txt  scripting.rst  support.rst
iolite_docs/api/: c.rst  lua.rst
iolite_docs/editor/: editor.rst  index.rst
iolite_docs/engine/: best_practices.rst  components.rst  importing_assets.rst  index.rst  installation.rst  intro.rst  palettes.rst  pro.rst  rendering.rst  rendering_overview.rst  voxel_shapes.rst
iolite_docs/engine/subsystems/: animation_system.rst  index.rst  lighting_and_gi.rst  particles.rst  physics.rst  post_processing.rst  sound.rst  ui.rst
iolite_docs/engine_and_editor/: editor.rst  guides.rst
iolite_docs/getting_started/: guides.rst  index.rst
iolite_docs/plugins/: creating_plugins.rst  lua.rst  other_plugins.rst  terrain_generator.rst  voxel_editing.rst  working_with_plugins.rst
iolite_lua_plugin/: CMakeLists.txt  README.md  forward_decls.h  generate_lua_api_doc.py  lua_plugin.cpp  script_init_state.inl
iolite_lua_plugin/dependencies/lua/lib/: luajit.lib
iolite_lua_plugin/dependencies/sol/: config.hpp  forward.hpp
iolite_plugins/: CMakeLists.txt  README.md  build_plugins.bat  build_plugins_ninja.bat  update_build_metadata.py
iolite_plugins/benchmark_plugin/: benchmark_plugin.cpp
iolite_plugins/denoiser_oidn_plugin/: denoiser_oidn_plugin.cpp
iolite_plugins/dependencies/: IconsFontAwesome6.h
iolite_plugins/dependencies/lua/include/: luajit.h
iolite_plugins/dependencies/lua/lib/: lua51.lib
iolite_plugins/dependencies/oidn/include/: config.h
iolite_plugins/dependencies/sol/: sol.hpp
iolite_plugins/lua_plugin/: forward_decls.h  generate_lua_api_doc.py  init_state.cpp  lua_plugin.cpp  lua_plugin.h  lua_plugin_api.h  script_init_state.inl
iolite_plugins/shared/: iolite_plugins_common.h  iolite_plugins_libraries.h
iolite_plugins/terrain_plugin/: terrain_plugin.cpp  terrain_plugin_api.h
iolite_plugins/voxel_editing_plugin/: common.h  editing.h  editing_generators.h  editing_tools.h  editing_ui.h  sparse_volume.h  undo_redo.h  voxel_editing_plugin.cpp
iolite_samples/: README.md  app_metadata.json
iolite_samples/sample_animation/managers/particle_effects/: torch.particle_effect.json
iolite_samples/sample_animation/media/animations/: walk.glb  walk_circle.glb
iolite_samples/sample_animation/media/scripts/: animation_controller.lua  gameplay_animation.lua
iolite_samples/sample_animation/media/voxels/: deer.vox  dino.vox  knight.vox
iolite_samples/sample_animation/worlds/: sample_animation.world.json
iolite_samples/sample_animation/worlds/sample_animation.world.snapshots/: 4fb05134e63a3dcf.ivs  baf3e85488164cf9.ivs
iolite_samples/sample_base/managers/post_effects/: neutral.post_effect.json
iolite_samples/sample_base/media/images/: concrete.dds
iolite_samples/sample_base/media/voxels/: cube_32_gray.vox
iolite_samples/sample_flappy/managers/particle_effects/: flappy_explosion.particle_effect.json
iolite_samples/sample_flappy/managers/post_effects/: flappy.post_effect.json
iolite_samples/sample_flappy/media/scripts/: gameplay_flappy.lua
iolite_samples/sample_flappy/media/sounds/: flappy_point.effect.json  flappy_wing.effect.json
iolite_samples/sample_flappy/media/voxels/: bird.vox  pipe.vox
iolite_samples/sample_flappy/worlds/: sample_flappy.world.json
iolite_samples/sample_heightmap/managers/palettes/: terrain.palette.json
iolite_samples/sample_heightmap/media/scripts/: heightmap.lua
iolite_samples/sample_heightmap/worlds/: sample_heightmap.world.json
iolite_samples/sample_minecraft/managers/palettes/: chunk_2087360595_1.palette.json  chunk_2087360595_10.palette.json  chunk_2087360595_100.palette.json  (+517 more)
iolite_samples/sample_minecraft/worlds/: sample_minecraft.world.json
iolite_samples/sample_minecraft_map/worlds/: sample_minecraft_map.world.json
iolite_samples/sample_physics/worlds/: sample_physics.world.json
iolite_samples/sample_puzzle_game/worlds/: sample_puzzle_game.world.json
iolite_samples/sample_spectrum/worlds/: sample_spectrum.world.json
iolite_samples/sample_tree_generator/worlds/: sample_tree_generator.world.json
iolite_samples/trapped_below/assets/: cursor_grab.aseprite
iolite_samples/trapped_below/worlds/: trapped_below.world.json
media/samples/: convert.bat
python_scripts/: README.md  heightmap_generator.py  package_generator.py  requirements.txt
samples/: .gitattributes  Iolite_RelWithDebInfo  README.md  app_metadata.json
samples/sample_destruction/worlds/: sample_destruction.world.json
samples/sample_flappy/worlds/: sample_flappy.world.json
samples/sample_heightmap/worlds/: sample_heightmap.world.json  sample_minecraf_map.world.json  sample_physics.world.json  sample_spectrum.world.json  sample_tree_generator.world.json
samples/sample_minecraft/worlds/: sample_minecraft.world.json
samples/sample_minecraft_map/worlds/: sample_minecraf_map.world.json  sample_minecraft_map.world.json
samples/sample_pathfinding/worlds/: sample_pathfinding.world.json
samples/sample_physics/worlds/: sample_physics.world.json
samples/sample_spectrum/worlds/: sample_spectrum.world.json
samples/sample_tree_generator/worlds/: sample_pathfinding.world.json  sample_tree_generator.world.json
samples/trapped_below/assets/: cursor.aseprite
samples/trapped_below/worlds/: trapped_below.world.json
various/: README.md  display_lut_aces_10.cube  display_lut_aces_10_no_blue_fix.cube  display_lut_aces_13.cube  display_lut_agx.cube  display_lut_tony_mc_mapface.cube
(+352 files in other folders)
